{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 47,
  "lineage": "79bc5a09-4219-af92-96f1-df4642021e7a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "NAT-Gateway-EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b51962a166c58e22",
            "domain": "vpc",
            "id": "eipalloc-0b51962a166c58e22",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-222-182-19.compute-1.amazonaws.com",
            "public_ip": "3.222.182.19",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.P1_IG",
            "aws_route_table.public_RT",
            "aws_route_table_association.public_subnet_asso",
            "aws_subnet.public_webtier_subnet",
            "aws_vpc.P1-3-tier-archi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion-host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02396cdd13e9a1257",
            "arn": "arn:aws:ec2:us-east-1:153254932719:instance/i-0873ecbd00b68d172",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0873ecbd00b68d172",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "P1 3tier archi keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cbf8b8e29566cf7f",
            "private_dns": "ip-10-0-1-141.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.141",
            "public_dns": "ec2-52-203-234-170.compute-1.amazonaws.com",
            "public_ip": "52.203.234.170",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0302b748de4862245",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0cdede4108fa5a6e1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00931cfc9e63c8df5",
            "tags": {
              "Name": "Bastion Host"
            },
            "tags_all": {
              "Name": "Bastion Host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cdede4108fa5a6e1"
            ]
          },
          "dependencies": [
            "aws_key_pair.P1_3tier_archi_keypair",
            "aws_security_group.bastion-host-sg",
            "aws_subnet.public_webtier_subnet",
            "aws_vpc.P1-3-tier-archi",
            "tls_private_key.P1_keypair"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "P1_IG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:153254932719:internet-gateway/igw-056d1c05f926b3bec",
            "id": "igw-056d1c05f926b3bec",
            "owner_id": "153254932719",
            "tags": {
              "Name": "P1_internet_gateway"
            },
            "tags_all": {
              "Name": "P1_internet_gateway"
            },
            "vpc_id": "vpc-0cfa8560991eb6f0d"
          },
          "dependencies": [
            "aws_vpc.P1-3-tier-archi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "apptier-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:153254932719:loadbalancer/app/Apptier-LB/85b3a373c2b07622",
            "arn_suffix": "app/Apptier-LB/85b3a373c2b07622",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-Apptier-LB-1631384738.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:153254932719:loadbalancer/app/Apptier-LB/85b3a373c2b07622",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Apptier-LB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-06afa67e6934da930"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03761ad0f3bc14e1b"
              },
              {
                "subnet_id": "subnet-06be3b124c67e05b7"
              }
            ],
            "subnets": [
              "subnet-03761ad0f3bc14e1b",
              "subnet-06be3b124c67e05b7"
            ],
            "vpc_id": "vpc-0cfa8560991eb6f0d",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.apptier-alb-sg",
            "aws_security_group.webtier-alb-sg",
            "aws_security_group.webtier-sg",
            "aws_subnet.private_apptier_subnet",
            "aws_vpc.P1-3-tier-archi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "webtier-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:153254932719:loadbalancer/app/Webtier-LB/b23d4fcf20e1874b",
            "arn_suffix": "app/Webtier-LB/b23d4fcf20e1874b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "Webtier-LB-1693217533.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:153254932719:loadbalancer/app/Webtier-LB/b23d4fcf20e1874b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Webtier-LB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0f9aa020cf980fabc"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00931cfc9e63c8df5"
              },
              {
                "subnet_id": "subnet-0139b162a8a952d20"
              }
            ],
            "subnets": [
              "subnet-00931cfc9e63c8df5",
              "subnet-0139b162a8a952d20"
            ],
            "vpc_id": "vpc-0cfa8560991eb6f0d",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.webtier-alb-sg",
            "aws_subnet.public_webtier_subnet",
            "aws_vpc.P1-3-tier-archi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "apptier-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:153254932719:listener/app/Apptier-LB/85b3a373c2b07622/2e1e3fd4b316a3e6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:153254932719:targetgroup/Apptier-ALB-TG/94aab28ebb4c2e24",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:153254932719:listener/app/Apptier-LB/85b3a373c2b07622/2e1e3fd4b316a3e6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:153254932719:loadbalancer/app/Apptier-LB/85b3a373c2b07622",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.apptier-alb",
            "aws_lb_target_group.apptier-alb-tg",
            "aws_security_group.apptier-alb-sg",
            "aws_security_group.webtier-alb-sg",
            "aws_security_group.webtier-sg",
            "aws_subnet.private_apptier_subnet",
            "aws_vpc.P1-3-tier-archi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "webtier-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:153254932719:listener/app/Webtier-LB/b23d4fcf20e1874b/d1a07b5542126f68",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:153254932719:targetgroup/Webtier-ALB-TG/8d53b3935f29d74f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:153254932719:listener/app/Webtier-LB/b23d4fcf20e1874b/d1a07b5542126f68",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:153254932719:loadbalancer/app/Webtier-LB/b23d4fcf20e1874b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.webtier-alb",
            "aws_lb_target_group.webtier-alb-tg",
            "aws_security_group.webtier-alb-sg",
            "aws_subnet.public_webtier_subnet",
            "aws_vpc.P1-3-tier-archi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "apptier-alb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:153254932719:targetgroup/Apptier-ALB-TG/94aab28ebb4c2e24",
            "arn_suffix": "targetgroup/Apptier-ALB-TG/94aab28ebb4c2e24",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:153254932719:targetgroup/Apptier-ALB-TG/94aab28ebb4c2e24",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Apptier-ALB-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0cfa8560991eb6f0d"
          },
          "dependencies": [
            "aws_vpc.P1-3-tier-archi"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "webtier-alb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:153254932719:targetgroup/Webtier-ALB-TG/8d53b3935f29d74f",
            "arn_suffix": "targetgroup/Webtier-ALB-TG/8d53b3935f29d74f",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:153254932719:targetgroup/Webtier-ALB-TG/8d53b3935f29d74f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Webtier-ALB-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0cfa8560991eb6f0d"
          },
          "dependencies": [
            "aws_vpc.P1-3-tier-archi"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "Private_NAT_GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b51962a166c58e22",
            "connectivity_type": "public",
            "id": "nat-091154f74cde53de0",
            "network_interface_id": "eni-00825cff80c2c0092",
            "private_ip": "10.0.2.84",
            "public_ip": "3.222.182.19",
            "subnet_id": "subnet-0139b162a8a952d20",
            "tags": {
              "Name": "P1_NAT_Gateway"
            },
            "tags_all": {
              "Name": "P1_NAT_Gateway"
            }
          },
          "dependencies": [
            "aws_eip.NAT-Gateway-EIP",
            "aws_internet_gateway.P1_IG",
            "aws_route_table.public_RT",
            "aws_route_table_association.public_subnet_asso",
            "aws_subnet.public_webtier_subnet",
            "aws_vpc.P1-3-tier-archi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "NAT-Gateway-RT-Apptier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:153254932719:route-table/rtb-0539c3c3ff6a1bbfc",
            "id": "rtb-0539c3c3ff6a1bbfc",
            "owner_id": "153254932719",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-091154f74cde53de0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table for NAT Gateway App tier"
            },
            "tags_all": {
              "Name": "Route Table for NAT Gateway App tier"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cfa8560991eb6f0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.NAT-Gateway-EIP",
            "aws_internet_gateway.P1_IG",
            "aws_nat_gateway.Private_NAT_GW",
            "aws_route_table.public_RT",
            "aws_route_table_association.public_subnet_asso",
            "aws_subnet.public_webtier_subnet",
            "aws_vpc.P1-3-tier-archi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "NAT-Gateway-RT-Database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:153254932719:route-table/rtb-0967331025342e71a",
            "id": "rtb-0967331025342e71a",
            "owner_id": "153254932719",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-091154f74cde53de0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table for NAT Gateway Database"
            },
            "tags_all": {
              "Name": "Route Table for NAT Gateway Database"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cfa8560991eb6f0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.NAT-Gateway-EIP",
            "aws_internet_gateway.P1_IG",
            "aws_nat_gateway.Private_NAT_GW",
            "aws_route_table.public_RT",
            "aws_route_table_association.public_subnet_asso",
            "aws_subnet.public_webtier_subnet",
            "aws_vpc.P1-3-tier-archi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:153254932719:route-table/rtb-034c800c924c06129",
            "id": "rtb-034c800c924c06129",
            "owner_id": "153254932719",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-056d1c05f926b3bec",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cfa8560991eb6f0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.P1_IG",
            "aws_vpc.P1-3-tier-archi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Nat-Gateway-RT-Association-Apptier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d67b18fbeee66d1d",
            "route_table_id": "rtb-0539c3c3ff6a1bbfc",
            "subnet_id": "subnet-03761ad0f3bc14e1b"
          },
          "dependencies": [
            "aws_eip.NAT-Gateway-EIP",
            "aws_internet_gateway.P1_IG",
            "aws_nat_gateway.Private_NAT_GW",
            "aws_route_table.NAT-Gateway-RT-Apptier",
            "aws_route_table.public_RT",
            "aws_route_table_association.public_subnet_asso",
            "aws_subnet.private_apptier_subnet",
            "aws_subnet.public_webtier_subnet",
            "aws_vpc.P1-3-tier-archi"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-026e32219c4fedb8e",
            "route_table_id": "rtb-0539c3c3ff6a1bbfc",
            "subnet_id": "subnet-06be3b124c67e05b7"
          },
          "dependencies": [
            "aws_eip.NAT-Gateway-EIP",
            "aws_internet_gateway.P1_IG",
            "aws_nat_gateway.Private_NAT_GW",
            "aws_route_table.NAT-Gateway-RT-Apptier",
            "aws_route_table.public_RT",
            "aws_route_table_association.public_subnet_asso",
            "aws_subnet.private_apptier_subnet",
            "aws_subnet.public_webtier_subnet",
            "aws_vpc.P1-3-tier-archi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Nat-Gateway-RT-Association-Database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b6a87d39aed7502d",
            "route_table_id": "rtb-0967331025342e71a",
            "subnet_id": "subnet-0c18675789cd580d5"
          },
          "dependencies": [
            "aws_eip.NAT-Gateway-EIP",
            "aws_internet_gateway.P1_IG",
            "aws_nat_gateway.Private_NAT_GW",
            "aws_route_table.NAT-Gateway-RT-Database",
            "aws_route_table.public_RT",
            "aws_route_table_association.public_subnet_asso",
            "aws_subnet.private_database_subnet",
            "aws_subnet.public_webtier_subnet",
            "aws_vpc.P1-3-tier-archi"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b3a3f0e38921edf5",
            "route_table_id": "rtb-0967331025342e71a",
            "subnet_id": "subnet-05520db98c4443ad4"
          },
          "dependencies": [
            "aws_eip.NAT-Gateway-EIP",
            "aws_internet_gateway.P1_IG",
            "aws_nat_gateway.Private_NAT_GW",
            "aws_route_table.NAT-Gateway-RT-Database",
            "aws_route_table.public_RT",
            "aws_route_table_association.public_subnet_asso",
            "aws_subnet.private_database_subnet",
            "aws_subnet.public_webtier_subnet",
            "aws_vpc.P1-3-tier-archi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0abf6a6e5edd70402",
            "route_table_id": "rtb-034c800c924c06129",
            "subnet_id": "subnet-00931cfc9e63c8df5"
          },
          "dependencies": [
            "aws_internet_gateway.P1_IG",
            "aws_route_table.public_RT",
            "aws_subnet.public_webtier_subnet",
            "aws_vpc.P1-3-tier-archi"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d52f701af2a7c40",
            "route_table_id": "rtb-034c800c924c06129",
            "subnet_id": "subnet-0139b162a8a952d20"
          },
          "dependencies": [
            "aws_internet_gateway.P1_IG",
            "aws_route_table.public_RT",
            "aws_subnet.public_webtier_subnet",
            "aws_vpc.P1-3-tier-archi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "apptier-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:153254932719:security-group/sg-06afa67e6934da930",
            "description": "Allow HTTP and HTTPS from webtier",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06afa67e6934da930",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03479f2ed99f481a5"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03479f2ed99f481a5"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "Apptier-ALB-SG",
            "name_prefix": "",
            "owner_id": "153254932719",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Apptier-ALB-SG"
            },
            "tags_all": {
              "Name": "Apptier-ALB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cfa8560991eb6f0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.webtier-alb-sg",
            "aws_security_group.webtier-sg",
            "aws_vpc.P1-3-tier-archi"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "apptier-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:153254932719:security-group/sg-0bc68174c01ed78e4",
            "description": "Allow inbound traffic from apptier ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bc68174c01ed78e4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow ssh from bastion host",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cdede4108fa5a6e1"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow traffic from apptier alb",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-06afa67e6934da930"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Apptier-SG",
            "name_prefix": "",
            "owner_id": "153254932719",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Apptier-SG"
            },
            "tags_all": {
              "Name": "Apptier-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cfa8560991eb6f0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.apptier-alb-sg",
            "aws_security_group.bastion-host-sg",
            "aws_security_group.webtier-alb-sg",
            "aws_security_group.webtier-sg",
            "aws_vpc.P1-3-tier-archi"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion-host-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:153254932719:security-group/sg-0cdede4108fa5a6e1",
            "description": "Allow Bastion host to ssh to App tier",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cdede4108fa5a6e1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from anywhere ",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Bastion-SG",
            "name_prefix": "",
            "owner_id": "153254932719",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Bastion-SG"
            },
            "tags_all": {
              "Name": "Bastion-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cfa8560991eb6f0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.P1-3-tier-archi"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webtier-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:153254932719:security-group/sg-0f9aa020cf980fabc",
            "description": "Allow HTTP and HTTPS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f9aa020cf980fabc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "Webtier-ALB-SG",
            "name_prefix": "",
            "owner_id": "153254932719",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Webtier-ALB-SG"
            },
            "tags_all": {
              "Name": "Webtier-ALB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cfa8560991eb6f0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.P1-3-tier-archi"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webtier-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:153254932719:security-group/sg-03479f2ed99f481a5",
            "description": "Allow inbound traffic from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03479f2ed99f481a5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh for stress test ",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow traffic from Web tier ALB",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0f9aa020cf980fabc"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Webtier-SG",
            "name_prefix": "",
            "owner_id": "153254932719",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Webtier-SG"
            },
            "tags_all": {
              "Name": "Webtier-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cfa8560991eb6f0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.webtier-alb-sg",
            "aws_vpc.P1-3-tier-archi"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_apptier_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:153254932719:subnet/subnet-03761ad0f3bc14e1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03761ad0f3bc14e1b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "153254932719",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Apptier Subnet 1"
            },
            "tags_all": {
              "Name": "Private Apptier Subnet 1"
            },
            "vpc_id": "vpc-0cfa8560991eb6f0d"
          },
          "dependencies": [
            "aws_vpc.P1-3-tier-archi"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:153254932719:subnet/subnet-06be3b124c67e05b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06be3b124c67e05b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "153254932719",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Apptier Subnet 2"
            },
            "tags_all": {
              "Name": "Private Apptier Subnet 2"
            },
            "vpc_id": "vpc-0cfa8560991eb6f0d"
          },
          "dependencies": [
            "aws_vpc.P1-3-tier-archi"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_database_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:153254932719:subnet/subnet-0c18675789cd580d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c18675789cd580d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "153254932719",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Database Subnet 1"
            },
            "tags_all": {
              "Name": "Private Database Subnet 1"
            },
            "vpc_id": "vpc-0cfa8560991eb6f0d"
          },
          "dependencies": [
            "aws_vpc.P1-3-tier-archi"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:153254932719:subnet/subnet-05520db98c4443ad4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05520db98c4443ad4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "153254932719",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Database Subnet 2"
            },
            "tags_all": {
              "Name": "Private Database Subnet 2"
            },
            "vpc_id": "vpc-0cfa8560991eb6f0d"
          },
          "dependencies": [
            "aws_vpc.P1-3-tier-archi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_webtier_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:153254932719:subnet/subnet-00931cfc9e63c8df5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00931cfc9e63c8df5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "153254932719",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Webtier Subnet 1"
            },
            "tags_all": {
              "Name": "Public Webtier Subnet 1"
            },
            "vpc_id": "vpc-0cfa8560991eb6f0d"
          },
          "dependencies": [
            "aws_vpc.P1-3-tier-archi"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:153254932719:subnet/subnet-0139b162a8a952d20",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0139b162a8a952d20",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "153254932719",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Webtier Subnet 2"
            },
            "tags_all": {
              "Name": "Public Webtier Subnet 2"
            },
            "vpc_id": "vpc-0cfa8560991eb6f0d"
          },
          "dependencies": [
            "aws_vpc.P1-3-tier-archi"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "P1-3-tier-archi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:153254932719:vpc/vpc-0cfa8560991eb6f0d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-094c8101a7543cb86",
            "default_route_table_id": "rtb-04b58360fde7ac0c2",
            "default_security_group_id": "sg-04ffd4bcbb2f68ef2",
            "dhcp_options_id": "dopt-0bbc73ab188e67d35",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cfa8560991eb6f0d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04b58360fde7ac0c2",
            "owner_id": "153254932719",
            "tags": {
              "Name": "P1-3-tier-archi"
            },
            "tags_all": {
              "Name": "P1-3-tier-archi"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}